[gd_scene load_steps=7 format=3 uid="uid://cn87ql7nfaqgx"]

[ext_resource type="Script" uid="uid://cxv38y4eu6e3d" path="res://interface.gd" id="1_cm0pq"]
[ext_resource type="Texture2D" uid="uid://b633qftr3bfp4" path="res://texture_07.png" id="4_cm0pq"]
[ext_resource type="Script" uid="uid://dkoiuhdum0fn" path="res://game.gd" id="4_lgr22"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fos0i"]
albedo_texture = ExtResource("4_cm0pq")

[sub_resource type="PlaneMesh" id="PlaneMesh_cm0pq"]

[sub_resource type="Environment" id="Environment_cm0pq"]
fog_enabled = true
fog_light_energy = 0.25

[node name="Main" type="Node3D"]

[node name="Interface" type="Node" parent="."]
script = ExtResource("1_cm0pq")

[node name="Login" type="Panel" parent="Interface"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -187.0
offset_top = -99.5
offset_right = 187.0
offset_bottom = 99.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ConnectButton" type="Button" parent="Interface/Login"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -101.0
offset_top = -47.5
offset_right = -12.0
offset_bottom = -12.5
grow_horizontal = 0
grow_vertical = 0
text = "Connect"

[node name="Label" type="Label" parent="Interface/Login"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Login"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Form" type="Control" parent="Interface/Login"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -66.5
offset_bottom = 59.5
grow_horizontal = 2
grow_vertical = 2

[node name="UsernameField" type="TextEdit" parent="Interface/Login/Form"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -101.0
offset_top = 0.5
offset_right = 101.0
offset_bottom = 39.5
grow_horizontal = 2
text = "Pooks"
placeholder_text = "Username"
caret_blink = true
draw_tabs = true
draw_spaces = true

[node name="PasswordField" type="TextEdit" parent="Interface/Login/Form"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -101.0
offset_top = -19.5
offset_right = 101.0
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Password"
caret_blink = true

[node name="ServerAddrField" type="TextEdit" parent="Interface/Login/Form"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -101.0
offset_top = -78.5
offset_right = 101.0
offset_bottom = -39.5
grow_horizontal = 2
grow_vertical = 0
text = "172.30.252.159"
placeholder_text = "127.0.0.1"
caret_blink = true

[node name="Menu" type="Panel" parent="Interface"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -267.5
offset_top = -175.5
offset_right = 267.5
offset_bottom = 175.5
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="RichTextLabel" parent="Interface/Menu"]
layout_mode = 1
offset_right = 61.0
offset_bottom = 29.0
text = "Menu"
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="OnlineCount" type="RichTextLabel" parent="Interface/Menu"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -152.0
offset_right = 2.0
offset_bottom = 31.0
grow_horizontal = 0
text = "Players Online: 0"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="DisconnectButton" type="Button" parent="Interface/Menu"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -110.0
offset_top = -47.0
offset_right = -11.0
offset_bottom = -12.0
grow_horizontal = 0
grow_vertical = 0
text = "Disconnect"

[node name="FPSCounter" type="RichTextLabel" parent="Interface"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -58.5
offset_right = 58.5
offset_bottom = 30.0
grow_horizontal = 2
text = "FPS: _"

[node name="PacketsRead" type="RichTextLabel" parent="Interface"]
offset_left = 17.0
offset_top = 12.0
offset_right = 151.0
offset_bottom = 154.0
text = "Sent (S): _
Sent (F): _
Read(S): _"

[node name="Game" type="Node" parent="."]
script = ExtResource("4_lgr22")

[node name="Players" type="Node" parent="Game"]

[node name="World" type="Node" parent="Game"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Game/World"]
transform = Transform3D(4.98728, 0, 0, 0, 4.98728, 0, 0, 0, 4.98728, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_fos0i")
mesh = SubResource("PlaneMesh_cm0pq")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Game/World"]
transform = Transform3D(0.708093, -0.497239, 0.501356, -0.00390392, 0.707249, 0.706954, -0.706109, -0.502546, 0.498857, 0, 1.5917, 0)
light_energy = 1.646

[node name="WorldEnvironment" type="WorldEnvironment" parent="Game/World"]
environment = SubResource("Environment_cm0pq")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.972002, 0.234973, 0, -0.234973, 0.972002, 0, 1.32956, 9.63216)

[connection signal="pressed" from="Interface/Login/ConnectButton" to="Interface" method="_on_connect_button_pressed"]
[connection signal="pressed" from="Interface/Menu/DisconnectButton" to="Interface" method="_on_disconnect_button_pressed"]
